--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <p class="description profile_description">
             A 3rd year college student seeking to use and improve own skills in computer programming web and game
             development. Currently studying at Panmantasan ng Lungsod ng San Pablo, believing to learn more and to 
-            be committed to suceed.
+            be committed to succeed.
           </p>
         </div>
       </div>
